deploy: 27201f4a2cc5ef7dc12c57524685c1af79556269

--- a/index.html
+++ b/index.html
@@ -1,31 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<!doctype html><html lang=en-US><title>Vong</title><script type=module>
+import init, * as bindings from '/vong/vong-189fcadd1d29a8c935290609279fadb308620b990be74037aa19063dd7d9b0b142ab8f21a1f885aeef8060b4fd63af0b.js';
+init('/vong/vong-189fcadd1d29a8c935290609279fadb308620b990be74037aa19063dd7d9b0b142ab8f21a1f885aeef8060b4fd63af0b_bg.wasm');
+window.wasmBindings = bindings;
 
-<head>
-  <!-- Title -->
-  <title>Vong</title>
-
-  <!-- Links -->
-  <link rel=rust data-trunk />
-  <link data-trunk rel="copy-dir" href="assets/" />
-</head>
-
-<body>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden;
-    }
-
-    canvas {
-      outline: none;
-      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-      /* mobile webkit */
-    }
-  </style>
-</body>
-
-</html>
+</script><link as=fetch crossorigin href=/vong/vong-189fcadd1d29a8c935290609279fadb308620b990be74037aa19063dd7d9b0b142ab8f21a1f885aeef8060b4fd63af0b_bg.wasm integrity=sha384-GJ_K3R0pqMk1KQYJJ5-tswhiC5kL50A3qhkGPdfZsLFCq48hofiFru-AYLT9Y68L rel=preload type=application/wasm><link crossorigin href=/vong/vong-189fcadd1d29a8c935290609279fadb308620b990be74037aa19063dd7d9b0b142ab8f21a1f885aeef8060b4fd63af0b.js integrity=sha384-Whu32KVhpo5C9PHT-QqVrpWler_oXUbKMT9a0MM_wMeAt_AaK2b1GrAL8DsiGQLA rel=modulepreload></head><body><style>body{margin:0;padding:0;height:100vh;width:100vw;overflow:hidden}canvas{outline:none;-webkit-tap-highlight-color:rgba(255,255,255,0)}</style></body></html>
