--- a/index.html
+++ b/index.html
@@ -15,17 +15,25 @@
     body {
       margin: 0;
       padding: 0;
-      height: 100vh;
       width: 100vw;
-      overflow: hidden;
+      height: 100vh;
+      background-color: black;
     }
 
     canvas {
       outline: none;
       -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-      /* mobile webkit */
+    }
+
+    #canvas-container {
+      width: 100%;
+      height: 100%;
     }
   </style>
+
+  <div id="canvas-container">
+    <canvas id="c" oncontextmenu="return false;"></canvas>
+  </div>
 </body>
 
 </html>
